--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.6.0",
     "date-fns": "^2.30.0"
   },
-  "devDependencies": {
+  "devDependencies":{
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
@@ -29,6 +29,9 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.0",
     "dotenv": "^16.3.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
 
